--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "An implementation of the Flux architecture.",
   "main": "dist/index.js",
-  "scrpts": {
-    "prepublish": "./node_modules/.bin/gulp build"
+  "scripts": {
+    "prepublish": "gulp build"
   },
   "keywords": [
     "flux",
