--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "flummox",
   "version": "1.1.0",
   "description": "An implementation of the Flux architecture.",
-  "main": "dist/index.js",
+  "main": "dist/Flux.js",
   "scripts": {
-    "prepublish": "gulp build"
+    "prepublish": "gulp build",
+    "test": "gulp build && jest"
   },
   "keywords": [
     "flux",
@@ -17,10 +18,18 @@
     "del": "^0.1.3",
     "gulp": "^3.8.9",
     "gulp-do": "^1.0.0",
-    "gulp-esnext": "^1.2.0"
+    "gulp-esnext": "^1.2.0",
+    "jest-cli": "^0.1.18"
   },
   "dependencies": {
     "events": "^1.0.2",
-    "flux": "^2.0.1"
+    "flux": "^2.0.1",
+    "object-assign": "^1.0.0"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/src/"
+    ]
   }
 }
