--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ build/Release
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
+
+# Compiled files
+/dist
