--- a/package.json
+++ b/package.json
@@ -1,35 +1,29 @@
 {
   "name": "flummox",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "An implementation of the Flux architecture.",
-  "main": "dist/Flux.js",
+  "main": "lib/Flummox.js",
   "scripts": {
-    "prepublish": "gulp build",
-    "test": "gulp build && jest"
+    "test": "make test"
   },
   "keywords": [
     "flux",
     "facebook",
-    "react"
+    "react",
+    "es6"
   ],
   "author": "Andrew Clark <acdlite@me.com>",
   "license": "MIT",
   "devDependencies": {
-    "del": "^0.1.3",
-    "gulp": "^3.8.9",
-    "gulp-do": "^1.0.0",
-    "gulp-esnext": "^1.2.0",
-    "jest-cli": "^0.1.18"
+    "6to5": "~3.0.10",
+    "chai": "~1.10.0",
+    "mocha": "~2.1.0",
+    "source-map-support": "~0.2.9"
   },
   "dependencies": {
-    "events": "^1.0.2",
-    "flux": "^2.0.1",
-    "object-assign": "^1.0.0"
-  },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/src/"
-    ]
+    "6to5-runtime": "~3.0.11",
+    "constant-case": "~1.1.0",
+    "eventemitter3": "~0.1.6",
+    "flux": "~2.0.1"
   }
 }
