--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An implementation of the Flux architecture.",
   "main": "lib/Flummox.js",
   "scripts": {
-    "test": "make test"
+    "test": "make fast-build test"
   },
   "keywords": [
     "flux",
@@ -15,14 +15,14 @@
   "author": "Andrew Clark <acdlite@me.com>",
   "license": "MIT",
   "devDependencies": {
-    "6to5": "~3.0.10",
+    "6to5": "~3.2.0",
     "chai": "~1.10.0",
     "mocha": "~2.1.0",
     "sinon": "~1.12.2",
     "source-map-support": "~0.2.9"
   },
   "dependencies": {
-    "6to5-runtime": "~3.0.11",
+    "6to5-runtime": "~3.1.1",
     "eventemitter3": "~0.1.6",
     "flux": "~2.0.1"
   }
