--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "6to5": "~3.2.0",
     "chai": "~1.10.0",
+    "es6-promise": "~2.0.1",
     "mocha": "~2.1.0",
     "sinon": "~1.12.2",
     "source-map-support": "~0.2.9"
