--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flummox",
-  "version": "2.0.0",
+  "version": "2.0.0-beta",
   "description": "An implementation of the Flux architecture.",
   "main": "lib/Flummox.js",
   "scripts": {
