--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "flummox",
-  "version": "2.0.0-beta",
+  "version": "2.0.1-beta",
   "description": "An implementation of the Flux architecture.",
-  "main": "lib/Flummox.js",
+  "main": "lib/Flux.js",
   "scripts": {
     "test": "make fast-build test"
   },
