--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flummox",
   "version": "2.3.0",
-  "description": "Idiomatic, modular, testable, isomorphic Flux. 0% singletons, 100% Flux.",
+  "description": "Idiomatic, modular, testable, isomorphic Flux. No singletons required.",
   "main": "lib/Flux.js",
   "repository": {
     "type": "git",
