--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "homepage": "https://github.com/acdlite/flummox/blob/latest/README.md",
   "bugs": "https://github.com/acdlite/flummox/issues",
   "scripts": {
-    "test": "make fast-build test",
+    "test": "make fast-js test",
     "prepublish": "npm run test"
   },
   "keywords": [
@@ -30,6 +30,7 @@
     "6to5-runtime": "~3.3.9",
     "chai": "~1.10.0",
     "es6-promise": "~2.0.1",
+    "istanbul": "~0.3.5",
     "mocha": "~2.1.0",
     "sinon": "~1.12.2",
     "source-map-support": "~0.2.9",
