--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "6to5-loader": "~3.0.0",
     "6to5-runtime": "~3.3.9",
     "chai": "~1.10.0",
+    "chai-as-promised": "~4.1.1",
     "es6-promise": "~2.0.1",
     "istanbul": "~0.3.5",
     "mocha": "~2.1.0",
