--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - "0.10"
-  - "0.11"
+  - iojs
+  - iojs-v1.0.2
 before_script: "npm install -g codeclimate-test-reporter"
 script: "make fast-js test-cov"
 after_script: "cat coverage/lcov.info | codeclimate"
