--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
   "author": "Andrew Clark <acdlite@me.com>",
   "license": "MIT",
   "devDependencies": {
-    "6to5": "~3.5.3",
-    "6to5-core": "~3.5.0",
-    "6to5-loader": "~3.0.0",
-    "6to5-runtime": "~3.3.9",
+    "babel": "~4.0.1",
+    "babel-runtime": "~4.0.1",
     "chai": "~1.10.0",
     "chai-as-promised": "~4.1.1",
     "es6-promise": "~2.0.1",
