--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "istanbul": "~0.3.5",
     "jsdom": "~3.1.1",
     "mocha": "~2.1.0",
-    "react": "0.12.x",
+    "react": ">=0.12.0",
     "sinon": "~1.12.2",
     "source-map-support": "~0.2.9",
     "webpack": "~1.5.3"
   },
   "peerDependencies": {
-    "react": "0.12.x"
+    "react": ">=0.12.0"
   },
   "dependencies": {
     "eventemitter3": "~0.1.6",
