--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "~4.0.1",
+    "babel-loader": "~4.0.0",
     "babel-runtime": "~4.0.1",
     "chai": "~1.10.0",
     "chai-as-promised": "~4.1.1",
