--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "~4.3.0",
+    "babel-eslint": "~1.0.12",
     "babel-loader": "~4.0.0",
     "babel-runtime": "~4.3.0",
     "chai": "~1.10.0",
     "chai-as-promised": "~4.1.1",
     "es6-promise": "~2.0.1",
+    "eslint": "~0.15.1",
     "istanbul": "~0.3.5",
     "jsdom": "~3.1.1",
     "mocha": "~2.1.0",
