Update tests for React 0.13 compatibility

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,6 @@
     "no-use-before-define": [2, "nofunc"]
   },
   "globals": {
-    "expect": true,
-    "jsdom": true
+    "expect": true
   }
 }
