--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "istanbul": "~0.3.5",
     "jsdom": "~3.1.1",
     "mocha": "~2.1.0",
-    "react": ">=0.12.0",
+    "react": "0.12.x",
     "sinon": "~1.12.2",
     "source-map-support": "~0.2.9",
     "webpack": "~1.5.3"
