--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "~4.3.0",
-    "babel-eslint": "~1.0.12",
+    "babel-eslint": "1.0.14",
     "babel-loader": "~4.0.0",
     "babel-runtime": "~4.3.0",
     "chai": "~1.10.0",
