--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
   "author": "Andrew Clark <acdlite@me.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel": "~4.3.0",
+    "babel": "4.7.12",
     "babel-eslint": "1.0.14",
-    "babel-loader": "~4.0.0",
-    "babel-runtime": "~4.3.0",
+    "babel-loader": "4.1.0",
+    "babel-runtime": "4.7.12",
     "chai": "~1.10.0",
-    "chai-as-promised": "~4.1.1",
+    "chai-as-promised": "4.3.0",
     "es6-promise": "~2.0.1",
     "eslint": "~0.15.1",
-    "istanbul": "~0.3.5",
+    "istanbul": "0.3.7",
     "jsdom": "~3.1.1",
-    "mocha": "~2.1.0",
+    "mocha": "2.2.1",
     "react": "0.13.x",
-    "sinon": "~1.12.2",
-    "source-map-support": "~0.2.9",
-    "webpack": "~1.5.3"
+    "sinon": "1.14.0",
+    "source-map-support": "0.2.10",
+    "webpack": "1.7.3"
   },
   "dependencies": {
     "eventemitter3": "~0.1.6",
