--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,12 @@
+/coverage
+/docs
+/lib/__tests__
+/lib/addons/__tests__
+/lib/addons/TestUtils.js
+/lib/test
 /src
+.eslintrc
+.travis.yml
+Makefile
+webpack.config.js
+test-utils.js
