--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flummox",
-  "version": "4.0.0-alpha",
+  "version": "4.0.0-alpha2",
   "description": "Idiomatic, modular, testable, isomorphic Flux. No singletons required.",
   "main": "lib/Flux.js",
   "repository": {
