--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "author": "Andrew Clark <acdlite@me.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel": "5.4.7",
-    "babel-eslint": "3.1.9",
-    "babel-loader": "5.1.3",
-    "babel-runtime": "5.4.7",
+    "babel": "~5.5.4",
+    "babel-eslint": "~3.1.9",
+    "babel-loader": "~5.1.3",
+    "babel-runtime": "~5.5.4",
     "chai": "~1.10.0",
     "chai-as-promised": "4.3.0",
     "es6-promise": "~2.0.1",
