--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "~5.5.4",
-    "babel-eslint": "~3.1.9",
+    "babel-eslint": "^4.1.6",
     "babel-loader": "~5.1.3",
     "babel-runtime": "~5.5.4",
     "chai": "~1.10.0",
     "chai-as-promised": "4.3.0",
     "es6-promise": "~2.0.1",
-    "eslint": "~0.21.2",
+    "eslint": "^1.10.1",
     "istanbul": "0.3.7",
     "jsdom": "~4.0.5",
     "mocha": "2.2.1",
