--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   "author": "Andrew Clark <acdlite@me.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel": "5.0.6",
-    "babel-eslint": "2.0.2",
-    "babel-loader": "5.0.0",
-    "babel-runtime": "5.0.6",
+    "babel": "~5.5.4",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "~5.1.3",
+    "babel-runtime": "~5.5.4",
     "chai": "~1.10.0",
     "chai-as-promised": "4.3.0",
     "es6-promise": "~2.0.1",
-    "eslint": "~0.18.0",
+    "eslint": "^1.10.2",
     "istanbul": "0.3.7",
     "jsdom": "~4.0.5",
     "mocha": "2.2.1",
@@ -43,7 +43,7 @@
   "dependencies": {
     "eventemitter3": "~0.1.6",
     "flux": "~2.0.1",
-    "object-assign": "~2.0.0",
+    "object-assign": "^4.0.1",
     "uniqueid": "~0.1.0"
   }
 }
