--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
   "author": "Andrew Clark <acdlite@me.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel": "~5.5.4",
+    "babel-cli": "^6.2.0",
+    "babel-core": "^6.2.1",
     "babel-eslint": "^4.1.6",
-    "babel-loader": "~5.1.3",
-    "babel-runtime": "~5.5.4",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-transform-runtime": "^6.1.18",
+    "babel-preset-es2015-loose": "^6.1.2",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
+    "babel-runtime": "^5.8.34",
     "chai": "~1.10.0",
     "chai-as-promised": "4.3.0",
     "es6-promise": "~2.0.1",
