--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flummox",
-  "version": "3.5.2",
+  "version": "3.6.0",
   "description": "Idiomatic, modular, testable, isomorphic Flux. No singletons required.",
   "main": "lib/Flux.js",
   "repository": {
@@ -22,6 +22,9 @@
     "es6"
   ],
   "author": "Andrew Clark <acdlite@me.com>",
+  "contributors": [
+    "Dmitri Voronianski <dmitri.voronianski@gmail.com>"
+  ],
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.2.0",
