--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flummox",
-  "version": "3.6.3",
+  "version": "3.6.4",
   "description": "Idiomatic, modular, testable, isomorphic Flux. No singletons required.",
   "main": "lib/Flux.js",
   "repository": {
@@ -31,7 +31,6 @@
     "babel-core": "^6.2.1",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.1.18",
     "babel-preset-es2015-loose": "^6.1.2",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
@@ -45,6 +44,7 @@
     "mocha": "2.2.1",
     "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.3",
+    "react-dom": "^0.14.3",
     "sinon": "1.14.0",
     "source-map-support": "0.2.10",
     "webpack": "1.7.3"
