--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flummox",
-  "version": "3.6.5",
+  "version": "3.6.6",
   "description": "Idiomatic, modular, testable, isomorphic Flux. No singletons required.",
   "main": "lib/Flux.js",
   "repository": {
@@ -31,6 +31,8 @@
     "babel-core": "^6.3.15",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.3.13",
+    "babel-plugin-transform-es3-property-literals": "^6.3.13",
     "babel-preset-es2015-loose": "^6.1.3",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
